Fix text align on dropdown button

--- a/app/assets/stylesheets/new_design/buttons.scss
+++ b/app/assets/stylesheets/new_design/buttons.scss
@@ -150,6 +150,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   position: absolute;
   right: 0;
+  text-align: left;
   top: 5 * $default-spacer;
   cursor: default;
   z-index: 10;
